# Tanja84dk_dns_ptr_generator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Findargparse.cmake  Findfmt.cmake  tanja84dk_generate_licenses.cmake
include/tanja84dk/: calc_ip.h  classes.h  dns_thing.h  license.h  tools.h
src/: calc_ip.cpp  dns_thing.cpp  license.cpp  license_helper.h  main.cpp  tools.cpp
